Fix weird wrapping with short messages by only setting wrap in content

--- a/src/main.css
+++ b/src/main.css
@@ -5,7 +5,6 @@
 
 * {
   box-sizing: border-box;
-  word-break: break-word;
   margin: 0;
   padding: 0;
 }
